@@ -1,4 +1,4 @@
-use Clutter::TestHelper tests => 5;
+use Clutter::TestHelper tests => 6;
 
 my $alpha = Clutter::Alpha->new();
 isa_ok($alpha, 'Clutter::Alpha', 'is an alpha');
@@ -11,3 +11,6 @@ $alpha->set_timeline($timeline);
 ok(1);
 
 is($alpha->get_timeline(), $timeline, 'same timeline');
+
+$alpha->set_func(\&Clutter::Alpha::ramp_inc);
+is($alpha->get_alpha(), 0, 'initial value');
